--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Career</title>
+    <title>Contact Us</title>
 
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css">
@@ -16,43 +16,66 @@
 <body>
     <!-- Header Section Start -->
     <header>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light main-manu" id="navbar">
-                <div class="container-fluid">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse home-nav-list" id="navbarSupportedContent">
-                    <ul class="navbar-nav text-uppercase mx-auto mb-2 mb-lg-0 d-flex">
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="branches.html"><i class="fa fa-thumbtack" aria-hidden="true"></i> branches</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="donors.html"><i class="fa fa-assistive-listening-systems" aria-hidden="true"></i> donor</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="gallaries.html"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3 active">
-                        <a class="nav-link text-light"  href="contact.html"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
-                      </li>
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3" id="navbar">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                <img src="assets/img/polliprottasha.jpg" class="img-fluid" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse text-uppercase" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarAboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      about
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
+                      <li><a class="dropdown-item" href="branches.html">history</a></li>
+                      <li><a class="dropdown-item" href="#">mission</a></li>
+                      <li><a class="dropdown-item" href="#">vision</a></li>
                     </ul>
-                  </div>
-                </div>
-              </nav>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarManagementDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      management
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarManagementDropdown">
+                      <li><a class="dropdown-item" href="#">item one</a></li>
+                      <li><a class="dropdown-item" href="#">item two</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">what we do</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">legal status</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="careers.html">career</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="gallaries.html">gallery</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="contact.html">contact us</a>
+                  </li>
+                </ul>
+
+              </div>
+            </div>
+          </nav>
         </div>
     </header>
     <!-- End Header Section -->
 
     <!-- Start Main Area Section -->
 
-    <section class="container content">
+    <section class="container-fluid content">
         <div class="row">
             <!-- Main Section Left Sidebar -->
             <div class="col-md-2 col-12 home-main-leftbar">
@@ -79,7 +102,7 @@
                 <div class="contact my-4">
                   <h3 class="text-center text-purple mb-3">Contact Information</h3>
                 
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7302.570962932978!2d90.35027497213083!3d23.772846356844667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c0bcdf50fd59%3A0x9ab0a63bb3267107!2sAdabar%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1644163799947!5m2!1sen!2sbd" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d931425.3304399835!2d89.90844633196123!3d24.228477778102274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3756577bb5a29f75%3A0x3ea41fe5ec720f76!2z4Kaq4Kay4KeN4Kay4KeAIOCmquCnjeCmsOCmpOCnjeCmr-CmvuCmtuCmvg!5e0!3m2!1sbn!2sbd!4v1644677027740!5m2!1sbn!2sbd" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 
 
                   <div class="contact-with-us">
@@ -90,7 +113,7 @@
                             <div class="text-center">
                                 <span class="fa fa-map-marker-alt"></span>
                                 <h2>Location</h2>
-                                <p>Grameen Manobic Unnayan Sangstha (Gramaus) Kaniz Mohol, 102 D.B Road, Shehora Munsibari Mymensingh</p>
+                                <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
                             </div>
                         </div>
 
@@ -98,8 +121,7 @@
                               <div class="text-center contact-type">
                                   <span class="fa fa-envelope"></span>
                                   <h2>Email</h2>
-                                  <a href="mailto:mail.one@example.com">mail@example.com</a><br>
-                                  <a href="mailto:mail.two@example.com">mail@example.com</a>
+                                  <a href="mailto:polliprottasha21@gmail.com">polliprottasha21@gmail.com</a>
                               </div>
                           </div>
 
@@ -107,7 +129,7 @@
                             <div class="text-center contact-type">
                                 <span class="fa fa-phone-alt"></span>
                                 <h2>Phone Number</h2>
-                                <a href="tel:+88091-62993">+88091-62993</a>
+                                <a href="tel:01618700030">+880-1618-7000-30</a>
                             </div>
                         </div>
                       </div>
@@ -162,25 +184,27 @@
 
               <div class="mb-4">
                 <ul>
-                    <li class="ps-1 py-1">Speach of Chairmen</li>
-                    <img src="assets/img/chairman.jpg" class="img-fluid w-100" alt="">
-                    <p>From 1971 Bangladesh is facing many challenges including social, environment and economical aspect . It's education, health, live hood women empowerment and socio-economic sector is steel vulnerable. Polliprottasha continues...</p>
-                    <a href="chairman-speech.html">Read More <i class="fas fa-arrow-right"></i></a>
-                </ul>
-
-                <ul>
-                  <li class="ps-1 py-1">Executive Director</li>
-                  <img src="assets/img/director.jpg" class="img-fluid w-100" alt="">
-                  <p>Sheikh Faruque ahammad has been working in development field over fifteen years tenures . He gained an ample experience in diverse development paradigms; like Microfinance (MF) management, result based program management (RBM)...</p>
-                  <a href="executive-director.html">Read More <i class="fas fa-arrow-right"></i></a>
+                  <li class="ps-1 py-1">Speach of Chairmen</li>
+                  <img src="assets/img/chairman.jpg" class="img-fluid w-100" alt="">
+                  <p>From 1971 Bangladesh is facing many challenges including social, environment and economical aspect....</p>
+                  <a href="chairman-speech.html">Read More <i class="fas fa-arrow-right"></i></a>
               </ul>
+
+              <ul>
+                <li class="ps-1 py-1">Executive Director</li>
+                <img src="assets/img/director.jpg" class="img-fluid w-100" alt="">
+                <p>Sheikh Faruque ahammad has been working in development field over fifteen years tenures. He gained...</p>
+                <a href="executive-director.html">Read More <i class="fas fa-arrow-right"></i></a>
+            </ul>
             </div>
 
               <div class="mb-4">
-                <ul>
-                    <li class="ps-1 py-1">Latest News / Notices</li>
-                    <li><a href="">গ্রামাউস এ নিয়োগ</a></li>
-                </ul>
+                <ul class="notice-board">
+                  <li class="ps-1 py-1">Latest News / Notices</li>
+                  <li><a href="assets/img/notice.jpg">
+                    <img src="assets/img/notice.jpg" class="img-fluid w-100" alt="">
+                  </a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -190,53 +214,44 @@
 
     <!-- Start Footer Section -->
     <footer>
-        <div class="container pt-4 pb-2">
-          <div class="row">
-            <div class="col-md-5 col-6">
-                <h5 class="mb-4">Contact Information</h5>
-                <p>Padakhep Manabik Unnayan Kendra<br>Head Office</p>
-
-                <p>
-                  House# 548, Road# 10, Baitul Aman Housing Society, Adabar, Mohammadpur, Dhaka-1207, Bangladesh.
-                  <br>
-                  Phone: PABX 880-2-58151126, 58156925, 55010405
-                  <br>
-                  Fax: 880-2-48119794
-                </p>
-                <p>
-                  E-mail: pmuk@padakhep.org, info@padakhep.org
-                </p>
-            </div>
-
-            <div class="col-md-3 col-6 morelinks">
-              <h5 class="mb-4">More Links</h5>
-              <ul>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-              </ul>
-          </div>
-
-          <div class="col-md-4 col-12">
-            <h5 class="mb-4">Facebook Page</h5>
-            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-          </div>
-        </div>
-
-        <hr>
-
+      <div class="container pt-4 pb-2">
         <div class="row">
-          <div class="col-12 text-center">
-             <b>&copy; ABC. All Rights Reserved.</b>
+          <div class="col-md-5 col-6">
+              <h5 class="mb-4">Contact Information</h5>
+              <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
+              <p>Phone: +880-1618-7000-30</p>
+              <p>E-mail: polliprottasha21@gmail.com</p>
           </div>
+
+          <div class="col-md-3 col-6 morelinks">
+            <!-- <h5 class="mb-4">More Links</h5>
+            <ul>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+            </ul> -->
         </div>
 
-          </div>
+        <div class="col-md-4 col-12">
+          <h5 class="mb-4">Facebook Page</h5>
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </div>
-    </footer>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-12 text-center">
+           <b>&copy; Polli Prottasha. All Rights Reserved.</b>
+        </div>
+      </div>
+
+        </div>
+      </div>
+  </footer>
     <!-- End Footer Section -->
 
     <!-- Bootstrap Bundle JS -->
