--- a/donors.html
+++ b/donors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Branches</title>
+    <title>Donors</title>
 
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css">
@@ -17,35 +17,58 @@
     <!-- Header Section Start -->
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light main-manu" id="navbar">
-                <div class="container-fluid">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse home-nav-list" id="navbarSupportedContent">
-                    <ul class="navbar-nav text-uppercase mx-auto mb-2 mb-lg-0 d-flex">
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="branches.html"><i class="fa fa-thumbtack" aria-hidden="true"></i> branches</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3 active">
-                        <a class="nav-link text-light" href="donors.html"><i class="fa fa-assistive-listening-systems" aria-hidden="true"></i> donor</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="gallaries.html"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="contact.html"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
-                      </li>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3" id="navbar">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                <img src="assets/img/polliprottasha.jpg" class="img-fluid" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse text-uppercase" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarAboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      about
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
+                      <li><a class="dropdown-item" href="#">history</a></li>
+                      <li><a class="dropdown-item" href="#">mission</a></li>
+                      <li><a class="dropdown-item" href="#">vision</a></li>
                     </ul>
-                  </div>
-                </div>
-              </nav>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarManagementDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      management
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarManagementDropdown">
+                      <li><a class="dropdown-item" href="#">item one</a></li>
+                      <li><a class="dropdown-item" href="#">item two</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">what we do</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">legal status</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="careers.html">career</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="gallaries.html">gallery</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact us</a>
+                  </li>
+                </ul>
+
+              </div>
+            </div>
+          </nav>
         </div>
     </header>
     <!-- End Header Section -->
@@ -123,25 +146,27 @@
 
               <div class="mb-4">
                 <ul>
-                    <li class="ps-1 py-1">Speach of Chairmen</li>
-                    <img src="assets/img/chairman.jpg" class="img-fluid w-100" alt="">
-                    <p>From 1971 Bangladesh is facing many challenges including social, environment and economical aspect . It's education, health, live hood women empowerment and socio-economic sector is steel vulnerable. Polliprottasha continues...</p>
-                    <a href="chairman-speech.html">Read More <i class="fas fa-arrow-right"></i></a>
-                </ul>
-
-                <ul>
-                  <li class="ps-1 py-1">Executive Director</li>
-                  <img src="assets/img/director.jpg" class="img-fluid w-100" alt="">
-                  <p>Sheikh Faruque ahammad has been working in development field over fifteen years tenures . He gained an ample experience in diverse development paradigms; like Microfinance (MF) management, result based program management (RBM)...</p>
-                  <a href="executive-director.html">Read More <i class="fas fa-arrow-right"></i></a>
+                  <li class="ps-1 py-1">Speach of Chairmen</li>
+                  <img src="assets/img/chairman.jpg" class="img-fluid w-100" alt="">
+                  <p>From 1971 Bangladesh is facing many challenges including social, environment and economical aspect....</p>
+                  <a href="chairman-speech.html">Read More <i class="fas fa-arrow-right"></i></a>
               </ul>
+
+              <ul>
+                <li class="ps-1 py-1">Executive Director</li>
+                <img src="assets/img/director.jpg" class="img-fluid w-100" alt="">
+                <p>Sheikh Faruque ahammad has been working in development field over fifteen years tenures. He gained...</p>
+                <a href="executive-director.html">Read More <i class="fas fa-arrow-right"></i></a>
+            </ul>
             </div>
 
               <div class="mb-4">
-                <ul>
-                    <li class="ps-1 py-1">Latest News / Notices</li>
-                    <li><a href="">গ্রামাউস এ নিয়োগ</a></li>
-                </ul>
+                <ul class="notice-board">
+                  <li class="ps-1 py-1">Latest News / Notices</li>
+                  <li><a href="assets/img/notice.jpg">
+                    <img src="assets/img/notice.jpg" class="img-fluid w-100" alt="">
+                  </a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -151,53 +176,44 @@
 
     <!-- Start Footer Section -->
     <footer>
-        <div class="container pt-4 pb-2">
-          <div class="row">
-            <div class="col-md-5 col-6">
-                <h5 class="mb-4">Contact Information</h5>
-                <p>Padakhep Manabik Unnayan Kendra<br>Head Office</p>
-
-                <p>
-                  House# 548, Road# 10, Baitul Aman Housing Society, Adabar, Mohammadpur, Dhaka-1207, Bangladesh.
-                  <br>
-                  Phone: PABX 880-2-58151126, 58156925, 55010405
-                  <br>
-                  Fax: 880-2-48119794
-                </p>
-                <p>
-                  E-mail: pmuk@padakhep.org, info@padakhep.org
-                </p>
-            </div>
-
-            <div class="col-md-3 col-6 morelinks">
-              <h5 class="mb-4">More Links</h5>
-              <ul>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-                <li><a href="">Organogram</a></li>
-              </ul>
-          </div>
-
-          <div class="col-md-4 col-12">
-            <h5 class="mb-4">Facebook Page</h5>
-            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-          </div>
-        </div>
-
-        <hr>
-
+      <div class="container pt-4 pb-2">
         <div class="row">
-          <div class="col-12 text-center">
-             <b>&copy; ABC. All Rights Reserved.</b>
+          <div class="col-md-5 col-6">
+              <h5 class="mb-4">Contact Information</h5>
+              <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
+              <p>Phone: +880-1618-7000-30</p>
+              <p>E-mail: polliprottasha21@gmail.com</p>
           </div>
+
+          <div class="col-md-3 col-6 morelinks">
+            <!-- <h5 class="mb-4">More Links</h5>
+            <ul>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+              <li><a href="">Organogram</a></li>
+            </ul> -->
         </div>
 
-          </div>
+        <div class="col-md-4 col-12">
+          <h5 class="mb-4">Facebook Page</h5>
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </div>
-    </footer>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-12 text-center">
+           <b>&copy; Polli Prottasha. All Rights Reserved.</b>
+        </div>
+      </div>
+
+        </div>
+      </div>
+  </footer>
     <!-- End Footer Section -->
 
     <!-- Bootstrap Bundle JS -->
