--- a/index.html
+++ b/index.html
@@ -20,33 +20,40 @@
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item home-header-carousel active">
-                    <img src="assets/img/header_slider1.jpeg" class="d-block w-100" alt="...">
+                    <img src="assets/img/header-slider-01.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h1>
-                          <span class="bg-warning">
-                            Livelihood Development for Tribal
-                          </span>
-                        </h1>
+                      <div class="slider-logo">
+                        <img src="assets/img/polliprottasha.jpg" class="logo img-fluid" alt="polli prottasha">
+                        <span>পল্লী প্রত্যাশা</span>
+                      </div>
+                          
                     </div>
                   </div>
                   <div class="carousel-item home-header-carousel">
-                    <img src="assets/img/home_slider2.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/img/header-slider-02.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>
-                            <span class="bg-warning">
-                                Employment and Income Generating Program(EIGP)
-                            </span>
-                          </h1>
+                      <div class="slider-logo">
+                        <img src="assets/img/polliprottasha.jpg" class="logo img-fluid" alt="polli prottasha">
+                        <span>পল্লী প্রত্যাশা</span>
+                      </div>
+                    </div>
+                  </div>
+                 <div class="carousel-item home-header-carousel">
+                    <img src="assets/img/header-slider-03.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <div class="slider-logo">
+                        <img src="assets/img/polliprottasha.jpg" class="logo img-fluid" alt="polli prottasha">
+                        <span>পল্লী প্রত্যাশা</span>
+                      </div>
                     </div>
                   </div>
                   <div class="carousel-item home-header-carousel">
-                    <img src="assets/img/header_slider1.jpeg" class="d-block w-100" alt="...">
+                    <img src="assets/img/header-slider-04.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>
-                            <span class="bg-warning">
-                                Gramaus Model Academy
-                            </span>
-                          </h1>
+                      <div class="slider-logo">
+                        <img src="assets/img/polliprottasha.jpg" class="logo img-fluid" alt="polli prottasha">
+                        <span>পল্লী প্রত্যাশা</span>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -70,7 +77,7 @@
                       about
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
-                      <li><a class="dropdown-item" href="branches.html">history</a></li>
+                      <li><a class="dropdown-item" href="#">history</a></li>
                       <li><a class="dropdown-item" href="#">mission</a></li>
                       <li><a class="dropdown-item" href="#">vision</a></li>
                     </ul>
@@ -161,29 +168,29 @@
                 <div id="carouselExampleIndicatorsTwo" class="home-main-carousel-two carousel slide text-light py-2 mb-3" data-bs-ride="carousel">
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <!-- <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="item-header">
-                          <h4 class="text-center py-2">Success Story Of Someone</h4>
+                          <h4 class="text-center py-2">Success Stories</h4>
                         </div>
   
                         <div class="item-content p-2">
                           <div class="row">
                             <div class="col-6">
-                              <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
+                              <img src="assets/img/s-01.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="col-6">
-                              <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
+                              <img src="assets/img/s-02.jpg" class="img-fluid" alt="">
                             </div>
                           </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <!-- <div class="carousel-item">
                       <div class="item-header">
-                        <h4 class="text-center py-2">Success Story Of Someone</h4>
+                        <h4 class="text-center py-2">Success Stories</h4>
                       </div>
 
                       <div class="item-content p-2">
@@ -196,10 +203,10 @@
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="carousel-item">
+                    </div> -->
+                    <!-- <div class="carousel-item">
                       <div class="item-header">
-                        <h4 class="text-center py-2">Success Story Of Someone</h4>
+                        <h4 class="text-center py-2">Success Stories</h4>
                       </div>
 
                       <div class="item-content p-2">
@@ -212,7 +219,7 @@
                             </div>
                           </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
 
                 </div>
@@ -224,18 +231,14 @@
                     <div class="col-md-6 col-12 mb-2">
                       <div class="content-box p-2">
                         <div class="row">
-                          <div class="col-md-12 col-lg-7 col-7">
+                          <div class="col-12">
                             <h6 class="text-center text-capitalize border rounded py-2">Working Area</h6>
-                            <img src="assets/img/details1.png" class="img-fluid w-100" alt="">
-                          </div>
-                          <div class="col-md-12 col-lg-5 col-5">
-                            <p class="mt-7">Padakhep has expanded its activities throughout the country. The organization implements its different programs/ projects...</p>
-                            <a href="blog.html" class="btn btn-rounded btn-sm btn-danger">Read More</a>
+                            <img src="assets/img/map-gauripur.jpg" class="img-fluid w-100" alt="">
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-6 col-12 mb-2">
+                    <!-- <div class="col-md-6 col-12 mb-2">
                       <div class="content-box p-2">
                         <div class="row">
                           <div class="col-md-12 col-lg-7 col-7">
@@ -248,7 +251,7 @@
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
 
@@ -258,15 +261,15 @@
                     <div class="col-md-6 col-12">
                       <div class="video-box mb-4">
                         <h5 class="py-2 text-center text-capitalize border text-light">Documentary Film</h5>
-                        <iframe width="100%" height="200" src="https://www.youtube.com/embed/xfwfMlfQE-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="100%" height="200" src="https://www.youtube.com/embed/0FjFHmbyUTM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                       </div>
                     </div>
-                    <div class="col-md-6 col-12">
+                    <!-- <div class="col-md-6 col-12">
                       <div class="video-box mb-4">
                         <h5 class="py-2 text-center text-capitalize border text-light">Documentary Film</h5>
                         <iframe width="100%" height="200" src="https://www.youtube.com/embed/xfwfMlfQE-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                     
 
@@ -297,25 +300,14 @@
                     <a href="executive-director.html">Read More <i class="fas fa-arrow-right"></i></a>
                 </ul>
 
-                <ul>
-                  <li class="ps-1 py-1">Speach of Chairmen</li>
-                  <img src="assets/img/chairman.jpg" class="img-fluid w-100" alt="">
-                  <p>From 1971 Bangladesh is facing many challenges including social, environment and economical aspect....</p>
-                  <a href="chairman-speech.html">Read More <i class="fas fa-arrow-right"></i></a>
-              </ul>
-
-              <ul>
-                <li class="ps-1 py-1">Executive Director</li>
-                <img src="assets/img/director.jpg" class="img-fluid w-100" alt="">
-                <p>Sheikh Faruque ahammad has been working in development field over fifteen years tenures. He gained...</p>
-                <a href="executive-director.html">Read More <i class="fas fa-arrow-right"></i></a>
-            </ul>
               </div>
 
               <div class="mb-4">
-                <ul>
+                <ul class="notice-board">
                     <li class="ps-1 py-1">Latest News / Notices</li>
-                    <li><a href="">গ্রামাউস এ নিয়োগ</a></li>
+                    <li><a href="assets/img/notice.jpg">
+                      <img src="assets/img/notice.jpg" class="img-fluid w-100" alt="">
+                    </a></li>
                 </ul>
             </div>
           </div>
@@ -330,22 +322,13 @@
           <div class="row">
             <div class="col-md-5 col-6">
                 <h5 class="mb-4">Contact Information</h5>
-                <p>Padakhep Manabik Unnayan Kendra<br>Head Office</p>
-
-                <p>
-                  House# 548, Road# 10, Baitul Aman Housing Society, Adabar, Mohammadpur, Dhaka-1207, Bangladesh.
-                  <br>
-                  Phone: PABX 880-2-58151126, 58156925, 55010405
-                  <br>
-                  Fax: 880-2-48119794
-                </p>
-                <p>
-                  E-mail: pmuk@padakhep.org, info@padakhep.org
-                </p>
+                <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
+                <p>Phone: +880-1618-7000-30</p>
+                <p>E-mail: polliprottasha21@gmail.com</p>
             </div>
 
             <div class="col-md-3 col-6 morelinks">
-              <h5 class="mb-4">More Links</h5>
+              <!-- <h5 class="mb-4">More Links</h5>
               <ul>
                 <li><a href="">Organogram</a></li>
                 <li><a href="">Organogram</a></li>
@@ -353,12 +336,12 @@
                 <li><a href="">Organogram</a></li>
                 <li><a href="">Organogram</a></li>
                 <li><a href="">Organogram</a></li>
-              </ul>
+              </ul> -->
           </div>
 
           <div class="col-md-4 col-12">
             <h5 class="mb-4">Facebook Page</h5>
-            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fপল্লী-প্রত্যাশা-106315105313155%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
           </div>
         </div>
 
@@ -366,7 +349,7 @@
 
         <div class="row">
           <div class="col-12 text-center">
-             <b>&copy; ABC. All Rights Reserved.</b>
+             <b>&copy; Polli Prottasha. All Rights Reserved.</b>
           </div>
         </div>
 
